--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -8,16 +8,16 @@ STR_STATION_PLATFORM                :Platform
 STR_STATION_FLEXIBLE                :Flexible Station Building
 STR_STATION_FLEXIBLE_UNTRAVERSABLE  :Flexible Station Building (First and last row untraversable)
 
-STR_STATION_CLASS_E88A9CA       :Wuhu Railway Station (2018) - Flexible Station Building
-STR_STATION_CLASS_E88A9CF       :Wuhu Railway Station (2018) - Modular Station Building, Front
-STR_STATION_CLASS_E88A9CB       :Wuhu Railway Station (2018) - Modular Station Building, Back
-STR_STATION_CLASS_E88A9CC       :Wuhu Railway Station (2018) - Modular Station Building, Centre
-STR_STATION_CLASS_E88A9CI       :Wuhu Railway Station (2018) - Modular Station Building, Side A
-STR_STATION_CLASS_E88A9CJ       :Wuhu Railway Station (2018) - Modular Station Building, Side B
-STR_STATION_CLASS_E88A9CK       :Wuhu Railway Station (2018) - Modular Station Building, Side C
-STR_STATION_CLASS_E88A9CH       :Wuhu Railway Station (2018) - Modular Station Building, Narrow
+STR_STATION_CLASS_E88A9CA       :AWSS: Wuhu (2021) - Flexible
+STR_STATION_CLASS_E88A9CF       :AWSS: Wuhu (2021) - Modular, Front
+STR_STATION_CLASS_E88A9CB       :AWSS: Wuhu (2021) - Modular, Back
+STR_STATION_CLASS_E88A9CC       :AWSS: Wuhu (2021) - Modular, Centre
+STR_STATION_CLASS_E88A9CI       :AWSS: Wuhu (2021) - Modular, Side A
+STR_STATION_CLASS_E88A9CJ       :AWSS: Wuhu (2021) - Modular, Side B
+STR_STATION_CLASS_E88A9CK       :AWSS: Wuhu (2021) - Modular, Side C
+STR_STATION_CLASS_E88A9CH       :AWSS: Wuhu (2021) - Modular, Narrow
 
-STR_STATION_CLASS_PLAT          :Platforms
+STR_STATION_CLASS_PLAT          :AWSS: Platforms
 
-STR_METASTATION_CLASS_E88A9CA   :Wuhu Railway Station (2018)
+STR_METASTATION_CLASS_E88A9CA   :Wuhu (2021)
 STR_METASTATION_CLASS_PLAT      :Platforms
