--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -17,7 +17,7 @@ STR_STATION_CLASS_E88A9CJ       :AWSS: 芜湖 (2021) - 模块化站房（侧2）
 STR_STATION_CLASS_E88A9CK       :AWSS: 芜湖 (2021) - 模块化站房（侧3）
 STR_STATION_CLASS_E88A9CH       :AWSS: 芜湖 (2021) - 模块化站房（扁）
 
-STR_STATION_CLASS_E9B8A0A       :芜湖北火车站 (2018) - 自动站房
+STR_STATION_CLASS_E9B8A0A       :AWSS：芜湖北 (2018) - 自动站房
 
 STR_STATION_CLASS_PLAT          :站台
 
