(station) fix chinese langfile

--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -20,7 +20,7 @@ STR_STATION_CLASS_E88A9CH       :AWSS: 芜湖 (2021) - 模块化站房（扁）
 STR_STATION_CLASS_E88A9CT       :AWSS: 芜湖 (2021) - 模块化站房（异）
 STR_STATION_CLASS_E88A9CX       :AWSS: 芜湖 (2021) - 模块化站房（汇）
 
-STR_STATION_CLASS_PLAT          :站台
+STR_STATION_CLASS_PLAT          :AWSS: 站台
 
-STR_METASTATION_CLASS_E88A9CA   :AWSS: 芜湖 (2021)
+STR_METASTATION_CLASS_E88A9CA   :芜湖 (2021)
 STR_METASTATION_CLASS_PLAT      :站台
