--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -3,10 +3,11 @@ STR_GRF_NAME                    :AWSS - Ahyangyi 的芜湖车站包
 STR_GRF_DESC                    :基于芜湖的车站设计的模组
 
 STR_STATION_DEFAULT                 :站房
-STR_STATION_UNTRAVERSABLE           :站房（不可通行）
+STR_STATION_UNTRAVERSABLE           :站房（无轨道）
 STR_STATION_PLATFORM                :平台
+STR_STATION_PLATFORM_UNTRAVERSABLE  :平台（无轨道）
 STR_STATION_FLEXIBLE                :自动站房
-STR_STATION_FLEXIBLE_UNTRAVERSABLE  :自动站房（第一行和最后一行不可通行）
+STR_STATION_FLEXIBLE_UNTRAVERSABLE  :自动站房（头尾无轨道）
 
 STR_STATION_CLASS_E88A9CA       :AWSS: 芜湖 (2021) - 自动站房
 STR_STATION_CLASS_E88A9CF       :AWSS: 芜湖 (2021) - 模块化站房（前）
