--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -35,7 +35,10 @@ STR_STATION_CLASS_E88A9CD0      :AWSS: 芜湖站 - 模块化（扁）
 STR_STATION_CLASS_E88A9CF1      :AWSS: 芜湖站 - 模块化（异）
 STR_STATION_CLASS_E88A9CF2      :AWSS: 芜湖站 - 模块化（汇）
 
+STR_STATION_CLASS_E88A9C0       :AWSS: 芜湖站 (1933)
+
 STR_STATION_CLASS_PLAT          :AWSS: 站台
 
 STR_METASTATION_CLASS_E88A9CA   :芜湖站 (2021)
+STR_METASTATION_CLASS_E88A9C0   :芜湖站 (1933)
 STR_METASTATION_CLASS_PLAT      :站台
