--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -35,7 +35,10 @@ STR_STATION_CLASS_E88A9CD0      :AWSS: Wuhu - Modular, Narrow
 STR_STATION_CLASS_E88A9CF1      :AWSS: Wuhu - Modular, Irregular
 STR_STATION_CLASS_E88A9CF2      :AWSS: Wuhu - Modular, Junction
 
+STR_STATION_CLASS_E88A9C0       :AWSS: Wuhu (1933)
+
 STR_STATION_CLASS_PLAT          :AWSS: Platforms
 
 STR_METASTATION_CLASS_E88A9CA   :Wuhu Station (2021)
+STR_METASTATION_CLASS_E88A9C0   :Wuhu Station (1933)
 STR_METASTATION_CLASS_PLAT      :Platforms
