--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -2,6 +2,12 @@
 STR_GRF_NAME                    :AWSS - Ahyangyi 的芜湖车站包
 STR_GRF_DESC                    :基于芜湖的车站设计的模组
 
+STR_PARAM_NIGHT_MODE            :夜景模式
+STR_PARAM_NIGHT_MODE_DESC       :使用适配 NightGFX 的夜景图像
+STR_PARAM_NIGHT_MODE_AUTO_DETECT:自动检测
+STR_PARAM_NIGHT_MODE_DISABLED   :不使用
+STR_PARAM_NIGHT_MODE_ENABLED    :使用
+
 STR_STATION_DEFAULT                 :站房
 STR_STATION_UNTRAVERSABLE           :站房（无轨道）
 STR_STATION_PLATFORM                :平台
