(station) Fix template names

--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -6,8 +6,8 @@ STR_STATION_DEFAULT                             :站房
 STR_STATION_UNTRAVERSABLE                       :站房（无轨道）
 STR_STATION_PLATFORM                            :平台
 STR_STATION_PLATFORM_UNTRAVERSABLE              :平台（无轨道）
-STR_STATION_FLEXIBLE_SIDE                       :自动站房（头尾有轨道，有侧式站台）
-STR_STATION_FLEXIBLE_NO_SIDE                    :自动站房（头尾有轨道，无侧式站台）
+STR_STATION_FLEXIBLE_SIDE                       :自动站房（头尾有轨道）
+STR_STATION_FLEXIBLE_NO_SIDE                    :自动站房（头尾有轨道但无站台）
 STR_STATION_FLEXIBLE_UNTRAVERSABLE_SIDE         :自动站房（头尾无轨道，有侧式站台）
 STR_STATION_FLEXIBLE_UNTRAVERSABLE_NO_SIDE      :自动站房（头尾无轨道，无侧式站台）
 STR_STATION_FLEXIBLE_FRONT_SIDE                 :自动站房（线侧，前）
