--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -61,7 +61,10 @@ STR_STATION_CLASS_E88A9CB7      :CNSPS: Wuhu - Narrow, Track + Platforms
 STR_STATION_CLASS_E88A9CF1      :CNSPS: Wuhu - Irregular
 STR_STATION_CLASS_E88A9CF2      :CNSPS: Wuhu - Junction
 
+STR_STATION_CLASS_E88A9C0       :CNSPS: Wuhu (1933)
+
 STR_STATION_CLASS_PLAT          :CNSPS: Wuhu - Extra Platforms
 
 STR_METASTATION_CLASS_E88A9CA   :Wuhu Station (2021)
+STR_METASTATION_CLASS_E88A9C0   :Wuhu Station (1933)
 STR_METASTATION_CLASS_PLAT      :Platforms
