(station) saner buildable platform selections

--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -73,7 +73,7 @@ STR_STATION_CLASS_E88A9C0       :CNSPS: 芜湖站 (1933)
 
 STR_STATION_CLASS_E9B8A0A       :CNSPS：芜湖北 (2018)
 
-STR_STATION_CLASS_PLAT          :CNSPS: 芜湖 - 额外站台
+STR_STATION_CLASS_PLAT          :CNSPS: 芜湖包 - 站台
 
 STR_METASTATION_CLASS_E88A9CA   :芜湖站 (2015)
 STR_METASTATION_CLASS_E88A9Ca   :芜湖站 (1992)
