(station) subcategories for irregular tiles

--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -64,8 +64,15 @@ STR_STATION_CLASS_E88A9CB4      :CNSPS: 芜湖站 - 扁，轨道
 STR_STATION_CLASS_E88A9CB5      :CNSPS: 芜湖站 - 扁，轨+近台
 STR_STATION_CLASS_E88A9CB6      :CNSPS: 芜湖站 - 扁，轨+远台
 STR_STATION_CLASS_E88A9CB7      :CNSPS: 芜湖站 - 扁，轨+双台
-STR_STATION_CLASS_E88A9CF1      :CNSPS: 芜湖站 - 异
-STR_STATION_CLASS_E88A9CF2      :CNSPS: 芜湖站 - 汇
+STR_STATION_CLASS_E88A9CC0      :CNSPS: 芜湖站 - 异，无站台
+STR_STATION_CLASS_E88A9CC1      :CNSPS: 芜湖站 - 异，近侧站台
+STR_STATION_CLASS_E88A9CC2      :CNSPS: 芜湖站 - 异，远侧站台
+STR_STATION_CLASS_E88A9CC3      :CNSPS: 芜湖站 - 异，双侧站台
+STR_STATION_CLASS_E88A9CC4      :CNSPS: 芜湖站 - 异，轨道
+STR_STATION_CLASS_E88A9CC5      :CNSPS: 芜湖站 - 异，轨+近台
+STR_STATION_CLASS_E88A9CC6      :CNSPS: 芜湖站 - 异，轨+远台
+STR_STATION_CLASS_E88A9CC7      :CNSPS: 芜湖站 - 异，轨+双台
+STR_STATION_CLASS_E88A9CF0      :CNSPS: 芜湖站 - 汇
 
 STR_STATION_CLASS_E88A9Ca       :CNSPS: 芜湖站 (1992)
 
