--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -64,8 +64,15 @@ STR_STATION_CLASS_E88A9CB4      :CNSPS: Wuhu - Narrow, Track
 STR_STATION_CLASS_E88A9CB5      :CNSPS: Wuhu - Narrow, Track + Near
 STR_STATION_CLASS_E88A9CB6      :CNSPS: Wuhu - Narrow, Track + Far
 STR_STATION_CLASS_E88A9CB7      :CNSPS: Wuhu - Narrow, Track + Platforms
-STR_STATION_CLASS_E88A9CF1      :CNSPS: Wuhu - Irregular
-STR_STATION_CLASS_E88A9CF2      :CNSPS: Wuhu - Junction
+STR_STATION_CLASS_E88A9CC0      :CNSPS: Wuhu - Irregular, No Platform
+STR_STATION_CLASS_E88A9CC1      :CNSPS: Wuhu - Irregular, Near Platform
+STR_STATION_CLASS_E88A9CC2      :CNSPS: Wuhu - Irregular, Far Platform
+STR_STATION_CLASS_E88A9CC3      :CNSPS: Wuhu - Irregular, Platforms
+STR_STATION_CLASS_E88A9CC4      :CNSPS: Wuhu - Irregular, Track
+STR_STATION_CLASS_E88A9CC5      :CNSPS: Wuhu - Irregular, Track + Near
+STR_STATION_CLASS_E88A9CC6      :CNSPS: Wuhu - Irregular, Track + Far
+STR_STATION_CLASS_E88A9CC7      :CNSPS: Wuhu - Irregular, Track + Platforms
+STR_STATION_CLASS_E88A9CF0      :CNSPS: Wuhu - Junction
 
 STR_STATION_CLASS_E88A9Ca       :CNSPS: Wuhu (1992)
 
