--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -1,6 +1,6 @@
-##grflangid 0x00
-STR_GRF_NAME                    :CNSPS Addon: Wuhu
-STR_GRF_DESC                    :Stations & platform set, modeled after those in Wuhu, Anhui, China.{}{}This NewGRF is designed as an add-on to {PUSH_COLOUR}{GOLD}ChinaSet: Platforms and Stations (CNSPS){POP_COLOUR}.
+##grflangid 0x01
+STR_GRF_NAME                    :CNSPS Addon: Wuhu {SILVER}0.1.0
+STR_GRF_DESC                    :An add-on to {PUSH_COLOUR}{GOLD}ChinaSet: Platforms and Stations (CNSPS){POP_COLOUR}, this NewGRF provides {PUSH_COLOUR}{GOLD}423{POP_COLOUR} modular tiles and {PUSH_COLOUR}{GOLD}12{POP_COLOUR} templated stations modeled after the {PUSH_COLOUR}{SILVER}Wuhu Railway Station{POP_COLOUR} in China.{}{}Includs graphics by {PUSH_COLOUR}{SILVER}Ahyangyi{POP_COLOUR} and {PUSH_COLOUR}{SILVER}Wensim{POP_COLOUR}.{}{}License: {PUSH_COLOUR}{SILVER}GNU General Public License v2{POP_COLOUR}.
 
 STR_STATION_DEFAULT                             :Station Building
 STR_STATION_UNTRAVERSABLE                       :Station Building (No Track)
