--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -1,6 +1,6 @@
 ##grflangid 0x56
-STR_GRF_NAME                    :CNSPS Addon: 芜湖
-STR_GRF_DESC                    :本 NewGRF 是 {PUSH_COLOUR}{GOLD}ChinaSet: Platforms and Stations(CNSPS){POP_COLOUR} 的扩展包，提供基于{PUSH_COLOUR}{SILVER}芜湖站{POP_COLOUR}的 {PUSH_COLOUR}{GOLD}423{POP_COLOUR} 种模块化地块和 {PUSH_COLOUR}{GOLD}12{POP_COLOUR} 种车站模版。{}{}图像作者：{PUSH_COLOUR}{SILVER}Ahyangyi{POP_COLOUR}, {PUSH_COLOUR}{SILVER}Wensim{POP_COLOUR}.{}{}许可证：{PUSH_COLOUR}{SILVER}GNU General Public License v2{POP_COLOUR}.
+STR_GRF_NAME                    :中国包：站台与车站 - 芜湖 {WHITE}0.1.0
+STR_GRF_DESC                    :本 NewGRF 是 {PUSH_COLOUR}{GOLD}中国{RED}包{SILVER}：站台与车站{POP_COLOUR} 的扩展包，提供基于{PUSH_COLOUR}{SILVER}芜湖站{POP_COLOUR}的 {PUSH_COLOUR}{GOLD}423{POP_COLOUR} 种模块化地块和 {PUSH_COLOUR}{GOLD}12{POP_COLOUR} 种车站模版。{}{}图形绘制者：{PUSH_COLOUR}{SILVER}Ahyangyi{POP_COLOUR}, {PUSH_COLOUR}{SILVER}NACHN{POP_COLOUR}.{}{}许可证：{PUSH_COLOUR}{SILVER}GNU General Public License v2{POP_COLOUR}.
 
 STR_STATION_DEFAULT                             :站房
 STR_STATION_UNTRAVERSABLE                       :站房（无轨道）
