(station) fix langfile (for future additions)

--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -78,7 +78,7 @@ STR_STATION_CLASS_E88A9Ca       :CNSPS: 芜湖站 (1992)
 
 STR_STATION_CLASS_E88A9C0       :CNSPS: 芜湖站 (1933)
 
-STR_STATION_CLASS_E9B8A0A       :CNSPS：芜湖北 (2018)
+STR_STATION_CLASS_E9B8A0A       :CNSPS: 芜湖北 (2018)
 
 STR_STATION_CLASS_PLAT          :CNSPS: 芜湖包 - 站台
 
