--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -6,6 +6,7 @@ STR_STATION_DEFAULT                             :Station Building
 STR_STATION_UNTRAVERSABLE                       :Station Building (No Track)
 STR_STATION_PLATFORM                            :Platform
 STR_STATION_PLATFORM_UNTRAVERSABLE              :Platform (No Track)
+STR_STATION_CONCOURSE                           :Concourse
 STR_STATION_FLEXIBLE_SIDE                       :Flexible Station Building (All tracks)
 STR_STATION_FLEXIBLE_NO_SIDE                    :Flexible Station Building (All tracks, no platform at ends)
 STR_STATION_FLEXIBLE_UNTRAVERSABLE_SIDE         :Flexible Station Building (No track at ends, side platform)
