--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -8,9 +8,9 @@ STR_STATION_PLATFORM                            :Platform
 STR_STATION_PLATFORM_UNTRAVERSABLE              :Platform (No Track)
 STR_STATION_CONCOURSE                           :Concourse
 STR_STATION_FLEXIBLE_SIDE                       :Flexible Station Building (All tracks)
-STR_STATION_FLEXIBLE_NO_SIDE                    :Flexible Station Building (All tracks, no platform at ends)
-STR_STATION_FLEXIBLE_UNTRAVERSABLE_SIDE         :Flexible Station Building (No track at ends, side platform)
-STR_STATION_FLEXIBLE_UNTRAVERSABLE_NO_SIDE      :Flexible Station Building (No track at ends, no side platform)
+STR_STATION_FLEXIBLE_NO_SIDE                    :Flexible Station Building (All tracks, no platform at sides)
+STR_STATION_FLEXIBLE_UNTRAVERSABLE_SIDE         :Flexible Station Building (No track at sides, side platform)
+STR_STATION_FLEXIBLE_UNTRAVERSABLE_NO_SIDE      :Flexible Station Building (No track at sides, no side platform)
 STR_STATION_FLEXIBLE_FRONT_SIDE                 :Flexible Station Building (Track-side, front)
 STR_STATION_FLEXIBLE_BACK_SIDE                  :Flexible Station Building (Track-side, back)
 STR_STATION_FLEXIBLE_FRONT_SIDE_NP              :Flexible Station Building (Track-side, front, no platform)
