--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -2,6 +2,11 @@
 STR_GRF_NAME                    :中国包：车站 - 芜湖 {WHITE}0.2.0-indev
 STR_GRF_DESC                    :本 NewGRF 是 {PUSH_COLOUR}{GOLD}中国{RED}包{SILVER}：车站{POP_COLOUR} (CNS) 的扩展包，提供基于{PUSH_COLOUR}{SILVER}芜湖站{POP_COLOUR}的 {PUSH_COLOUR}{GOLD}450{POP_COLOUR} 种模块化地块和 {PUSH_COLOUR}{GOLD}12{POP_COLOUR} 种车站模版。{}{}{PUSH_COLOUR}{SILVER}图形绘制者{POP_COLOUR}:{}Ahyangyi, WenSim, NACHN.{}{PUSH_COLOUR}{SILVER}程序编写者{POP_COLOUR}:{}Ahyangyi{}在 {PUSH_COLOUR}{SILVER}GPL v2{POP_COLOUR} 下分发。
 
+STR_PARAM_INTRODUCTION_YEAR             :启用年份
+STR_PARAM_INTRODUCTION_YEAR_DESC        :决定本 NewGRF 内每个车站是否在特定年份后才可用
+STR_PARAM_INTRODUCTION_YEAR_DISABLED    :任何年份都可以建造任何车站
+STR_PARAM_INTRODUCTION_YEAR_ENABLED     :特定年份后才可以建造车站
+
 STR_STATION_DEFAULT                             :站房
 STR_STATION_UNTRAVERSABLE                       :站房（无轨道）
 STR_STATION_PLATFORM                            :站台
