--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -7,7 +7,8 @@ STR_PARAM_INTRODUCTION_YEAR_DESC        :Choose whether each station in this New
 STR_PARAM_INTRODUCTION_YEAR_DISABLED    :Always available
 STR_PARAM_INTRODUCTION_YEAR_ENABLED     :Only available after set year
 
-STR_PARAM_E88A9CA_INTRODUCTION_YEAR     :Start year for Wuhu Station
+STR_PARAM_E88A9CA_INTRODUCTION_YEAR         :Start year for Wuhu Station
+STR_PARAM_E88A9CA_INTRODUCTION_YEAR_DESC    :Choose the year Wuhu Station becomes available. 0 means default (2005).
 
 STR_STATION_DEFAULT                             :Station Building
 STR_STATION_UNTRAVERSABLE                       :Station Building (No Track)
