--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -7,18 +7,18 @@ STR_STATION_UNTRAVERSABLE                       :站房（无轨道）
 STR_STATION_PLATFORM                            :站台
 STR_STATION_PLATFORM_UNTRAVERSABLE              :站台（无轨道）
 STR_STATION_CONCOURSE                           :车站广场
-STR_STATION_FLEXIBLE_SIDE                       :自动站房（两侧有轨道）
-STR_STATION_FLEXIBLE_NO_SIDE                    :自动站房（两侧有轨道但无站台）
+STR_STATION_FLEXIBLE_SIDE                       :自动站房（两侧有轨道，无侧式站台）
+STR_STATION_FLEXIBLE_NO_SIDE                    :自动站房（两侧有轨道，有侧式站台）
 STR_STATION_FLEXIBLE_UNTRAVERSABLE_SIDE         :自动站房（两侧无轨道，有侧式站台）
 STR_STATION_FLEXIBLE_UNTRAVERSABLE_NO_SIDE      :自动站房（两侧无轨道，无侧式站台）
 STR_STATION_FLEXIBLE_FRONT_SIDE                 :自动站房（线侧，前）
 STR_STATION_FLEXIBLE_BACK_SIDE                  :自动站房（线侧，后）
 STR_STATION_FLEXIBLE_FRONT_SIDE_NP              :自动站房（线侧，前，无站台）
 STR_STATION_FLEXIBLE_BACK_SIDE_NP               :自动站房（线侧，后，无站台）
-STR_STATION_FLEXIBLE_FRONT_SIDE_THIRD           :自动站房（线侧，前，有轨道）
-STR_STATION_FLEXIBLE_BACK_SIDE_THIRD            :自动站房（线侧，后，有轨道）
-STR_STATION_FLEXIBLE_FRONT_SIDE_THIRD_NP        :自动站房（线侧，前，有轨道无站台）
-STR_STATION_FLEXIBLE_BACK_SIDE_THIRD_NP         :自动站房（线侧，后，有轨道无站台）
+STR_STATION_FLEXIBLE_FRONT_SIDE_THIRD           :自动站房（线侧，前轨，无侧式站台）
+STR_STATION_FLEXIBLE_BACK_SIDE_THIRD            :自动站房（线侧，后轨，无侧式站台）
+STR_STATION_FLEXIBLE_FRONT_SIDE_THIRD_NP        :自动站房（线侧，前轨，有侧式站台）
+STR_STATION_FLEXIBLE_BACK_SIDE_THIRD_NP         :自动站房（线侧，后轨，有侧式站台）
 
 STR_STATION_CLASS_E88A9CA       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 - 模板
 STR_STATION_CLASS_E88A9C80      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} 前
