(station) designate more station names in langfiles

--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -89,7 +89,17 @@ STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992
 
 STR_STATION_CLASS_E88A9C0       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1933)
 
-STR_STATION_CLASS_E9B8A0A       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu North (2018)
+STR_STATION_CLASS_E9B8A0A       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu North
+
+STR_STATION_CLASS_E5BC8BA       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu South
+
+STR_STATION_CLASS_E697A0A       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuwei
+
+STR_STATION_CLASS_E6B9BEA       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wanzhi
+
+STR_STATION_CLASS_E999B5A       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Nanling
+
+STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Fanchang West
 
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Extra Platforms
 
