--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -89,7 +89,17 @@ STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站
 
 STR_STATION_CLASS_E88A9C0       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 (1933)
 
-STR_STATION_CLASS_E9B8A0A       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖北 (2018)
+STR_STATION_CLASS_E9B8A0A       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖北站
+
+STR_STATION_CLASS_E5BC8BA       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖南站
+
+STR_STATION_CLASS_E697A0A       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}无为站
+
+STR_STATION_CLASS_E6B9BEA       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}湾沚站
+
+STR_STATION_CLASS_E999B5A       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}南陵站
+
+STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}繁昌西站
 
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖包 - 站台
 
