--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -21,10 +21,10 @@ STR_STATION_FLEXIBLE_SIDE                       :Flexible Station Building (All 
 STR_STATION_FLEXIBLE_NO_SIDE                    :Flexible Station Building (All tracks, side platform)
 STR_STATION_FLEXIBLE_UNTRAVERSABLE_SIDE         :Flexible Station Building (No track at sides, side platform)
 STR_STATION_FLEXIBLE_UNTRAVERSABLE_NO_SIDE      :Flexible Station Building (No track at sides, no side platform)
-STR_STATION_FLEXIBLE_FRONT_SIDE                 :Flexible Station Building (Track-side, front)
-STR_STATION_FLEXIBLE_BACK_SIDE                  :Flexible Station Building (Track-side, back)
-STR_STATION_FLEXIBLE_FRONT_SIDE_NP              :Flexible Station Building (Track-side, front, no platform)
-STR_STATION_FLEXIBLE_BACK_SIDE_NP               :Flexible Station Building (Track-side, back, no platform)
+STR_STATION_FLEXIBLE_FRONT_SIDE                 :Flexible Station Building (Trackside, front)
+STR_STATION_FLEXIBLE_BACK_SIDE                  :Flexible Station Building (Trackside, back)
+STR_STATION_FLEXIBLE_FRONT_SIDE_NP              :Flexible Station Building (Trackside, front, no platform)
+STR_STATION_FLEXIBLE_BACK_SIDE_NP               :Flexible Station Building (Trackside, back, no platform)
 STR_STATION_FLEXIBLE_FRONT_SIDE_THIRD           :Flexible Station Building (With track, front, no side platform)
 STR_STATION_FLEXIBLE_BACK_SIDE_THIRD            :Flexible Station Building (With track, back, no side platform)
 STR_STATION_FLEXIBLE_FRONT_SIDE_THIRD_NP        :Flexible Station Building (With track, front, side platform)
