--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -85,6 +85,8 @@ STR_STATION_CLASS_E88A9CC6      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, T
 STR_STATION_CLASS_E88A9CC7      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, Track + Platforms
 STR_STATION_CLASS_E88A9CF0      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Junction
 
+STR_OBJECT_STRAIGHT_STAIR       :Staircases
+
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992)
 
 STR_STATION_CLASS_E88A9C0       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1934)
@@ -102,6 +104,8 @@ STR_STATION_CLASS_E999B5A       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Nanling
 STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Fanchang West
 
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Extra Platforms
+
+STR_OBJECT_CLASS_E88A9CZ        :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Plaza
 
 STR_METASTATION_CLASS_E88A9CA   :Wuhu Station (2015)
 STR_METASTATION_CLASS_E88A9Ca   :Wuhu Station (1992)
