--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -47,21 +47,27 @@ STR_STATION_CLASS_E88A9C8C      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Back Corner
 STR_STATION_CLASS_E88A9C8D      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Back Corner, Platform
 STR_STATION_CLASS_E88A9C8E      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Back Corner, Track
 STR_STATION_CLASS_E88A9C8F      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Back Corner, Both
+STR_STATION_CLASS_E88A9C90      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Centre, No Platform
 STR_STATION_CLASS_E88A9C91      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Centre, Near Platform
 STR_STATION_CLASS_E88A9C92      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Centre, Far Platform
 STR_STATION_CLASS_E88A9C93      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Centre, Platforms
+STR_STATION_CLASS_E88A9CA0      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side A, No Platform
 STR_STATION_CLASS_E88A9CA1      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side A, Near Platform
 STR_STATION_CLASS_E88A9CA2      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side A, Far Platform
 STR_STATION_CLASS_E88A9CA3      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side A, Platforms
+STR_STATION_CLASS_E88A9CA4      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side B, No Platform
 STR_STATION_CLASS_E88A9CA5      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side B, Near Platform
 STR_STATION_CLASS_E88A9CA6      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side B, Far Platform
 STR_STATION_CLASS_E88A9CA7      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side B, Platforms
+STR_STATION_CLASS_E88A9CA8      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side C, No Platform
 STR_STATION_CLASS_E88A9CA9      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side C, Near Platform
 STR_STATION_CLASS_E88A9CAA      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side C, Far Platform
 STR_STATION_CLASS_E88A9CAB      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side C, Platforms
+STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side D, No Platform
 STR_STATION_CLASS_E88A9CAD      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side D, Near Platform
 STR_STATION_CLASS_E88A9CAE      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side D, Far Platform
 STR_STATION_CLASS_E88A9CAF      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side D, Platforms
+STR_STATION_CLASS_E88A9CB0      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Narrow, No Platform
 STR_STATION_CLASS_E88A9CB1      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Narrow, Near Platform
 STR_STATION_CLASS_E88A9CB2      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Narrow, Far Platform
 STR_STATION_CLASS_E88A9CB3      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Narrow, Platforms
@@ -69,6 +75,7 @@ STR_STATION_CLASS_E88A9CB4      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Narrow, Trac
 STR_STATION_CLASS_E88A9CB5      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Narrow, Track + Near
 STR_STATION_CLASS_E88A9CB6      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Narrow, Track + Far
 STR_STATION_CLASS_E88A9CB7      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Narrow, Track + Platforms
+STR_STATION_CLASS_E88A9CC0      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, No Platform
 STR_STATION_CLASS_E88A9CC1      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, Near Platform
 STR_STATION_CLASS_E88A9CC2      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, Far Platform
 STR_STATION_CLASS_E88A9CC3      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, Platforms
@@ -77,14 +84,6 @@ STR_STATION_CLASS_E88A9CC5      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, T
 STR_STATION_CLASS_E88A9CC6      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, Track + Far
 STR_STATION_CLASS_E88A9CC7      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, Track + Platforms
 STR_STATION_CLASS_E88A9CF0      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Junction
-
-STR_OBJECT_CLASS_E88A9C90       :Wuhu Station - Centre
-STR_OBJECT_CLASS_E88A9CA0       :Wuhu Station - Side A
-STR_OBJECT_CLASS_E88A9CA4       :Wuhu Station - Side B
-STR_OBJECT_CLASS_E88A9CA8       :Wuhu Station - Side C
-STR_OBJECT_CLASS_E88A9CAC       :Wuhu Station - Side D
-STR_OBJECT_CLASS_E88A9CB0       :Wuhu Station - Narrow
-STR_OBJECT_CLASS_E88A9CC0       :Wuhu Station - Irregular
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992)
 
