--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -47,23 +47,18 @@ STR_STATION_CLASS_E88A9C8C      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Back Corner
 STR_STATION_CLASS_E88A9C8D      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Back Corner, Platform
 STR_STATION_CLASS_E88A9C8E      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Back Corner, Track
 STR_STATION_CLASS_E88A9C8F      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Back Corner, Both
-STR_STATION_CLASS_E88A9C90      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Centre, No Platform
 STR_STATION_CLASS_E88A9C91      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Centre, Near Platform
 STR_STATION_CLASS_E88A9C92      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Centre, Far Platform
 STR_STATION_CLASS_E88A9C93      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Centre, Platforms
-STR_STATION_CLASS_E88A9CA0      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side A, No Platform
 STR_STATION_CLASS_E88A9CA1      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side A, Near Platform
 STR_STATION_CLASS_E88A9CA2      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side A, Far Platform
 STR_STATION_CLASS_E88A9CA3      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side A, Platforms
-STR_STATION_CLASS_E88A9CA4      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side B, No Platform
 STR_STATION_CLASS_E88A9CA5      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side B, Near Platform
 STR_STATION_CLASS_E88A9CA6      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side B, Far Platform
 STR_STATION_CLASS_E88A9CA7      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side B, Platforms
-STR_STATION_CLASS_E88A9CA8      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side C, No Platform
 STR_STATION_CLASS_E88A9CA9      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side C, Near Platform
 STR_STATION_CLASS_E88A9CAA      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side C, Far Platform
 STR_STATION_CLASS_E88A9CAB      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side C, Platforms
-STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side D, No Platform
 STR_STATION_CLASS_E88A9CAD      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side D, Near Platform
 STR_STATION_CLASS_E88A9CAE      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side D, Far Platform
 STR_STATION_CLASS_E88A9CAF      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Side D, Platforms
@@ -84,6 +79,12 @@ STR_STATION_CLASS_E88A9CC5      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, T
 STR_STATION_CLASS_E88A9CC6      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, Track + Far
 STR_STATION_CLASS_E88A9CC7      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Irregular, Track + Platforms
 STR_STATION_CLASS_E88A9CF0      :{PUSH_COLOUR}{WHITE}|>{POP_COLOUR} Junction
+
+STR_STATION_CLASS_E88A9C90      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Centre
+STR_STATION_CLASS_E88A9CA0      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side A
+STR_STATION_CLASS_E88A9CA4      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side B
+STR_STATION_CLASS_E88A9CA8      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side C
+STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side D
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992)
 
