--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -86,6 +86,8 @@ STR_STATION_CLASS_E88A9CA4      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side 
 STR_STATION_CLASS_E88A9CA8      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side C
 STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side D
 
+STR_STATION_CLASS_E88A9CZ       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Objects
+
 STR_OBJECT_STRAIGHT_STAIR       :Staircases
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992)
