--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -87,8 +87,10 @@ STR_STATION_CLASS_E88A9CA8      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side 
 STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side D
 
 STR_STATION_CLASS_E88A9CZ       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Objects
+STR_STATION_CLASS_E88A9CR       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Road Stops
 
 STR_OBJECT_STRAIGHT_STAIR       :Staircases
+STR_ROADSTOP_STRAIGHT_STAIR     :Staircases
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992)
 
@@ -109,6 +111,7 @@ STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Fanchang W
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Extra Platforms
 
 STR_OBJECT_CLASS_E88A9CZ        :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Plaza
+STR_ROADSTOP_CLASS_E88A9CR      :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu
 
 STR_METASTATION_CLASS_E88A9CA   :Wuhu Station (2015)
 STR_METASTATION_CLASS_E88A9Ca   :Wuhu Station (1992)
