--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -3,12 +3,28 @@ STR_GRF_NAME                    :中国包：车站 - 芜湖 {WHITE}0.3.0-indev
 STR_GRF_DESC                    :{}{PUSH_COLOUR}{GOLD}中国{RED}包{POP_COLOUR}：车站 - {PUSH_COLOUR}{SILVER}芜湖 {WHITE}0.3.0-indev{POP_COLOUR}{}{}本 NewGRF 是 {PUSH_COLOUR}{GOLD}中国{RED}包{POP_COLOUR}：车站 (CNS) 的扩展包，提供基于{PUSH_COLOUR}{SILVER}芜湖{POP_COLOUR}的火车站的模块化地块和车站模版。{}{}{PUSH_COLOUR}{WHITE}贡献者{POP_COLOUR}:{}Ahyangyi, WenSim.{}{}在 {PUSH_COLOUR}{SILVER}GPL v2{POP_COLOUR} 下分发。
 
 STR_PARAM_INTRODUCTION_YEAR             :全局设置 - 车站可建造年份
-STR_PARAM_INTRODUCTION_YEAR_DESC        :决定本 NewGRF 内每个车站是否在特定年份后才可用
+STR_PARAM_INTRODUCTION_YEAR_DESC        :选择本 NewGRF 内每个车站是否在特定年份后才可用
 STR_PARAM_INTRODUCTION_YEAR_DISABLED    :任何年份都可以建造任何车站
 STR_PARAM_INTRODUCTION_YEAR_ENABLED     :指定年份后才可以建造车站
 
+STR_PARAM_E88A9CA_ENABLE_TEMPLATE           :芜湖站 - 启用车站模板
+STR_PARAM_E88A9CA_ENABLE_TEMPLATE_DESC      :选择是否启用现代芜湖站的车站模板
+STR_PARAM_E88A9CA_ENABLE_TEMPLATE_ENABLED   :启用
+STR_PARAM_E88A9CA_ENABLE_TEMPLATE_DISABLED  :禁用
+
+STR_PARAM_E88A9CA_ENABLE_MODULAR            :芜湖站 - 启用模块化车站
+STR_PARAM_E88A9CA_ENABLE_MODULAR_DESC       :选择是否启用现代芜湖站的模块化车站功能
+STR_PARAM_E88A9CA_ENABLE_MODULAR_ENABLED    :启用
+STR_PARAM_E88A9CA_ENABLE_MODULAR_DISABLED   :禁用
+
 STR_PARAM_E88A9CA_INTRODUCTION_YEAR         :芜湖站 - 可建造年份
 STR_PARAM_E88A9CA_INTRODUCTION_YEAR_DESC    :选择芜湖站从哪一年开始可以被建造。{}{}注意：本选项是否生效由“全局设置 - 限定可建造年份”所控制。
+
+STR_PARAM_E88A9C0_ENABLE_MODULAR            :芜湖站 (1934) - 启用
+STR_PARAM_E88A9C0_ENABLE_MODULAR_DESC       :选择是否启用芜湖站 (1934)
+STR_PARAM_E88A9C0_ENABLE_MODULAR_ENABLED    :启用
+STR_PARAM_E88A9C0_ENABLE_MODULAR_DISABLED   :禁用
+
 STR_PARAM_E88A9C0_INTRODUCTION_YEAR         :芜湖站 (1934) - 可建造年份
 STR_PARAM_E88A9C0_INTRODUCTION_YEAR_DESC    :选择芜湖站 (1934)从哪一年开始可以被建造。{}{}注意：本选项是否生效由“全局设置 - 限定可建造年份”所控制。
 
