--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -86,11 +86,12 @@ STR_STATION_CLASS_E88A9CA4      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side 
 STR_STATION_CLASS_E88A9CA8      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side C
 STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side D
 
+# doc only
 STR_STATION_CLASS_E88A9CZ       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Objects
 STR_STATION_CLASS_E88A9CR       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Road Stops
 
 STR_OBJECT_STRAIGHT_STAIR       :Staircases
-STR_ROADSTOP_STRAIGHT_STAIR     :Staircases
+STR_ROADSTOP_WEST_PLAZA_BUS     :West square bus stop
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992)
 
