--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -86,6 +86,13 @@ STR_STATION_CLASS_E88A9CA4      :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR}
 STR_STATION_CLASS_E88A9CA8      :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR} 侧3
 STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR} 侧4
 
+# doc only
+STR_STATION_CLASS_E88A9CZ       :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR} 物件
+STR_STATION_CLASS_E88A9CR       :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR} 汽车站
+
+STR_OBJECT_STRAIGHT_STAIR       :Staircases
+STR_ROADSTOP_STRAIGHT_STAIR     :西站广场公交车站
+
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 (1992)
 
 STR_STATION_CLASS_E88A9C0       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 (1934)
@@ -103,6 +110,9 @@ STR_STATION_CLASS_E999B5A       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}南陵站
 STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}繁昌西站
 
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖包 - 站台
+
+STR_OBJECT_CLASS_E88A9CZ        :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 - 广场
+STR_ROADSTOP_CLASS_E88A9CR      :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站
 
 STR_METASTATION_CLASS_E88A9CA   :芜湖站 (2015)
 STR_METASTATION_CLASS_E88A9Ca   :芜湖站 (1992)
