--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -90,8 +90,8 @@ STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR}
 STR_STATION_CLASS_E88A9CZ       :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR} 物件
 STR_STATION_CLASS_E88A9CR       :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR} 汽车站
 
-STR_OBJECT_STRAIGHT_STAIR       :Staircases
-STR_ROADSTOP_WEST_PLAZA_BUS     :西站广场公交车站
+STR_OBJECT_WEST_PLAZA           :西广场
+STR_ROADSTOP_WEST_PLAZA_BUS     :西广场公交车站
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 (1992)
 
