--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -90,7 +90,7 @@ STR_STATION_CLASS_E88A9CAC      :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Side 
 STR_STATION_CLASS_E88A9CZ       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Objects
 STR_STATION_CLASS_E88A9CR       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Road Stops
 
-STR_OBJECT_STRAIGHT_STAIR       :Staircases
+STR_OBJECT_WEST_PLAZA           :West square
 STR_ROADSTOP_WEST_PLAZA_BUS     :West square bus stop
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992)
