--- a/station/lang/chinese.lng
+++ b/station/lang/chinese.lng
@@ -91,6 +91,7 @@ STR_STATION_CLASS_E88A9CZ       :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR}
 STR_STATION_CLASS_E88A9CR       :{PUSH_COLOUR}{WHITE}CNS：芜湖站{POP_COLOUR} 汽车站
 
 STR_OBJECT_WEST_PLAZA           :西广场
+STR_OBJECT_STATION              :站房
 STR_ROADSTOP_WEST_PLAZA_BUS     :西广场公交车站
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 (1992)
@@ -111,6 +112,7 @@ STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}繁昌西
 
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖包 - 站台
 
+STR_OBJECT_CLASS_E88A9CB0       :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 - 站房
 STR_OBJECT_CLASS_E88A9CZ        :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站 - 广场
 STR_ROADSTOP_CLASS_E88A9CR      :{PUSH_COLOUR}{WHITE}CNS：{POP_COLOUR}芜湖站
 
