--- a/station/lang/english-uk.lng
+++ b/station/lang/english-uk.lng
@@ -91,6 +91,7 @@ STR_STATION_CLASS_E88A9CZ       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Objec
 STR_STATION_CLASS_E88A9CR       :{PUSH_COLOUR}{WHITE}CNS: Wuhu{POP_COLOUR} Road Stops
 
 STR_OBJECT_WEST_PLAZA           :West square
+STR_OBJECT_STATION              :Station Building
 STR_ROADSTOP_WEST_PLAZA_BUS     :West square bus stop
 
 STR_STATION_CLASS_E88A9Ca       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu (1992)
@@ -111,6 +112,7 @@ STR_STATION_CLASS_E7B981W       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Fanchang W
 
 STR_STATION_CLASS_E88A9CP       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Extra Platforms
 
+STR_OBJECT_CLASS_E88A9CB0       :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Station Building
 STR_OBJECT_CLASS_E88A9CZ        :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu - Plaza
 STR_ROADSTOP_CLASS_E88A9CR      :{PUSH_COLOUR}{WHITE}CNS:{POP_COLOUR} Wuhu
 
